creditas-sf/force-app/main/default/objects/OpportunityRole__c/OpportunityRole__c.object-meta.xml
<CustomObject>
    <label>OpportunityRole</label>
    <nameField>
        <displayFormat>OppRole-{00000000}</displayFormat>
        <label>OpportunityRole Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityRoles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>