creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/ExternalOpportunityTenant__c.field-meta.xml
<CustomField>
    <fullName>ExternalOpportunityTenant__c</fullName>
    <label>ExternalOpportunityTenant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>