creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/ExternalOppVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalOppVersion__c</fullName>
    <label>ExternalOppVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>