creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/ExternalPersonId__c.field-meta.xml
<CustomField>
    <fullName>ExternalPersonId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OpportunityRoles</relationshipLabel>
    <relationshipName>OpportunityRoles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>