creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/ReportedIncome__c.field-meta.xml
<CustomField>
    <fullName>ReportedIncome__c</fullName>
    <label>Renda informada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>