creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>SOLIDARY_DEBTOR</fullName>
            </value>
            <value>
                <fullName>COLLATERAL_GUARANTOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>