creditas-sf/force-app/main/default/objects/OpportunityRole__c/fields/Titular_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Titular_da_Conta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Titular da Conta</label>
    <type>Checkbox</type>
</CustomField>